RESOLVED FIXED119099
-[WebHTMLView attributedSubstringForProposedRange:actualRange:] does not include strikethrough attribute in the returned attributed string
https://bugs.webkit.org/show_bug.cgi?id=119099
Summary -[WebHTMLView attributedSubstringForProposedRange:actualRange:] does not incl...
Sam Weinig
Reported 2013-07-25 12:02:29 PDT
-[WebHTMLView attributedSubstringForProposedRange:actualRange:] does not include strikethrough attribute in the returned attributed string
Attachments
Patch (12.63 KB, patch)
2013-07-25 12:05 PDT, Sam Weinig
enrica: review+
Sam Weinig
Comment 1 2013-07-25 12:05:43 PDT
Enrica Casucci
Comment 2 2013-07-25 12:46:21 PDT
Comment on attachment 207474 [details] Patch Looks good.
Sam Weinig
Comment 3 2013-07-25 13:51:44 PDT
Note You need to log in before you can comment on or make changes to this bug.